# pumplab

./: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  auth.py  openai.py  stripe.py
backend/app/api/routes/supabase/: plans.py  post_usage.py  subscriptions.py
backend/app/core/: config.py  cors.py
backend/app/schemas/: __init__.py  carousel.py
backend/app/services/: carousel_master_template.py  narrative_template.py  openai_mocks.py  openai_service.py  stripe_service.py
backend/tests/: conftest.py  test_auth.py  test_carousel_master_template.py  test_carousel_retry_export.py  test_health.py  test_narrative_template.py  test_openai_routes.py  test_openai_service.py  test_stripe_routes.py
frontend/: .env.example  README.md  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: middleware.ts  types.ts
specs/001-carousel-text-editor/: spec.md
specs/001-monorepo-split/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-instagram-carousel-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-carousel-text-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-narrative-theme-server-side/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: types.ts
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: fonts.ts  stripe.ts
(+161 files in other folders)
